:bug: - fix: prevent dropdown from sitting behind sidebar

--- a/src/components/dropdown/dropdown.scss
+++ b/src/components/dropdown/dropdown.scss
@@ -19,7 +19,7 @@
       border: 1px solid var(--page-color-primary);
       border-radius: var(--border-radius-l);
       box-sizing: border-box;
-      z-index: 1000;
+      z-index: 2000;
 
       .mykn-a,
       .mykn-button,
